--- a/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
+++ b/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
@@ -167,7 +167,7 @@ section[data-tab].active{display:block}
 <header class="hero-section text-white text-center py-16 px-4 relative overflow-hidden">
   <div class="flex justify-center mb-8">
     <img 
-      src="./assets/winter_carnival_poster_logo.jpeg"
+      src="../assets/winter_carnival_poster_logo.jpeg"
       alt="Winter Carnival Cup 2026 Logo"
       class="h-28 md:h-36 lg:h-40 drop-shadow-2xl"
     />
