--- a/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
+++ b/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Winter Carnival Cup 2026 — We Are Eleven</title>
+<title>Winter Carnival Tournament 2026 — We Are Eleven</title>
 
 <script src="https://cdn.tailwindcss.com"></script>
 
@@ -168,7 +168,7 @@ section[data-tab].active{display:block}
   <div class="absolute inset-0 bg-black/10"></div>
   <div class="relative z-10 max-w-4xl mx-auto">
     <h1 class="text-5xl md:text-7xl lg:text-8xl font-black mb-6 bg-gradient-to-r from-white via-slate-100 to-slate-200 bg-clip-text text-transparent drop-shadow-2xl">
-      ❄️ Winter Carnival Cup 2026
+      ❄️ Winter Carnival Tournament 2026
     </h1>
     <p class="text-xl md:text-2xl font-semibold text-slate-200 tracking-wide mb-8">
       We Are Eleven — Premier League Tournament
@@ -206,7 +206,7 @@ section[data-tab].active{display:block}
   <div class="section-title mb-12">
     <div class="section-bar"></div>
     <h2 class="text-4xl lg:text-5xl font-black bg-gradient-to-r from-slate-900 to-slate-700 bg-clip-text text-transparent">
-      Winter Carnival Cup 2026
+      Winter Carnival Tournament 2026
     </h2>
   </div>
 
@@ -414,7 +414,7 @@ section[data-tab].active{display:block}
 </main>
 
 <footer class="text-center py-16 text-sm text-slate-500 bg-gradient-to-r from-slate-900/50 to-slate-800/50 backdrop-blur-sm border-t border-slate-200/20">
-  <p class="font-semibold text-slate-300 mb-2">© 2026 We Are Eleven • Winter Carnival Cup</p>
+  <p class="font-semibold text-slate-300 mb-2">© 2026 We Are Eleven • Winter Carnival Tournament</p>
   <p>Powered by GOD's TURF, Kolkata</p>
 </footer>
 
