--- a/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
+++ b/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
@@ -168,7 +168,7 @@ section[data-tab].active{display:block}
   <div class="absolute inset-0 bg-black/10"></div>
   <div class="relative z-10 max-w-4xl mx-auto">
     <h1 class="text-5xl md:text-7xl lg:text-8xl font-black mb-6 bg-gradient-to-r from-white via-slate-100 to-slate-200 bg-clip-text text-transparent drop-shadow-2xl">
-      ❄️ Winter Carnival Tournament 2026
+      ❄️ Winter Carnival 2026
     </h1>
     <p class="text-xl md:text-2xl font-semibold text-slate-200 tracking-wide mb-8">
       We Are Eleven — Premier League Tournament
