--- a/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
+++ b/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
@@ -217,7 +217,7 @@ section[data-tab].active{display:block}
     </div>
     <div>
       <p class="font-black text-3xl lg:text-4xl text-slate-900 mb-3">⚽ Teams</p>
-      <p class="text-2xl font-bold text-slate-600">8 Elite Teams</p>
+      <p class="text-2xl font-bold text-slate-600">7 Elite Teams</p>
     </div>
     <div>
       <p class="font-black text-3xl lg:text-4xl text-slate-900 mb-3">🎯 Format</p>
@@ -244,15 +244,13 @@ section[data-tab].active{display:block}
       <h3 class="text-3xl font-black">👑 Team Captains</h3>
     </div>
     <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
-      <div class="captain-badge p-4 rounded-2xl text-center font-bold text-slate-800 shadow-lg">Dipanjan Majumder</div>
-      <div class="captain-badge p-4 rounded-2xl text-center font-bold text-slate-800 shadow-lg">Thomas Joseph</div>
-      <div class="captain-badge p-4 rounded-2xl text-center font-bold text-slate-800 shadow-lg">Yash Agarwal</div>
+      <div class="captain-badge p-4 rounded-2xl text-center font-bold text-slate-800 shadow-lg">Aakash Singh</div>
       <div class="captain-badge p-4 rounded-2xl text-center font-bold text-slate-800 shadow-lg">Ankit Aich</div>
-      <div class="captain-badge p-4 rounded-2xl text-center font-bold text-slate-800 shadow-lg">Sourav Acharjee</div>
-      <div class="captain-badge p-4 rounded-2xl text-center font-bold text-slate-800 shadow-lg">Arghyadeep Das</div>
+      <div class="captain-badge p-4 rounded-2xl text-center font-bold text-slate-800 shadow-lg">Dipanjan majumder</div>
+      <div class="captain-badge p-4 rounded-2xl text-center font-bold text-slate-800 shadow-lg">Yash Agarwal</div>
+      <div class="captain-badge p-4 rounded-2xl text-center font-bold text-slate-800 shadow-lg">Sankhaneel Roychowdhury</div>
       <div class="captain-badge p-4 rounded-2xl text-center font-bold text-slate-800 shadow-lg">Subhamoy Das</div>
-      <div class="captain-badge p-4 rounded-2xl text-center font-bold text-slate-800 shadow-lg">Hrishi</div>
-    </div>
+      <div class="captain-badge p-4 rounded-2xl text-center font-bold text-slate-800 shadow-lg">Thomas Joseph</div>
   </div>
 
   <!-- Competition Structure -->
