--- a/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
+++ b/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
@@ -239,18 +239,23 @@ section[data-tab].active{display:block}
 
   <!-- Captains Showcase -->
   <div class="bg-white/80 backdrop-blur-sm rounded-3xl shadow-2xl p-12 mb-20 border border-white/50">
+    
     <div class="section-title mb-8">
       <div class="section-bar"></div>
       <h3 class="text-3xl font-black">👑 Team Captains</h3>
     </div>
-    <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+    
+    <!-- Captains Grid -->
+    <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 mb-12">
       <div class="captain-badge p-4 rounded-2xl text-center font-bold text-slate-800 shadow-lg">Aakash Singh</div>
       <div class="captain-badge p-4 rounded-2xl text-center font-bold text-slate-800 shadow-lg">Ankit Aich</div>
-      <div class="captain-badge p-4 rounded-2xl text-center font-bold text-slate-800 shadow-lg">Dipanjan majumder</div>
+      <div class="captain-badge p-4 rounded-2xl text-center font-bold text-slate-800 shadow-lg">Dipanjan Majumder</div>
       <div class="captain-badge p-4 rounded-2xl text-center font-bold text-slate-800 shadow-lg">Yash Agarwal</div>
       <div class="captain-badge p-4 rounded-2xl text-center font-bold text-slate-800 shadow-lg">Sankhaneel Roychowdhury</div>
       <div class="captain-badge p-4 rounded-2xl text-center font-bold text-slate-800 shadow-lg">Subhamoy Das</div>
       <div class="captain-badge p-4 rounded-2xl text-center font-bold text-slate-800 shadow-lg">Thomas Joseph</div>
+    </div>
+  
   </div>
 
   <!-- Competition Structure -->
