Add new participant 'Hrishi' with details

--- a/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
+++ b/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
@@ -528,6 +528,12 @@ section[data-tab].active{display:block}
           <span>Age 29</span><span class="font-black text-emerald-600">₹3L</span>
         </div>
       </div>
+      <div class="p-6 rounded-2xl bg-white border hover:shadow-lg">
+        <p class="text-xl font-black">Hrishi</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>Age 29</span><span class="font-black text-emerald-600">₹4L</span>
+        </div>
+      </div>
     </div>
   </div>
 
