--- a/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
+++ b/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
@@ -565,22 +565,141 @@ section[data-tab].active{display:block}
   </div>
 
 </section>
-  
-<!-- ================= COMING SOON SECTIONS (Enhanced) ================= -->
-<section data-tab="teams">
-  <div class="bg-gradient-to-br from-slate-50 to-slate-100 rounded-3xl shadow-2xl p-16 text-center border border-slate-200/50 coming-soon min-h-[400px]">
-    <div class="max-w-md mx-auto">
-      <div class="text-7xl mb-8 animate-bounce">🎯</div>
-      <h3 class="text-4xl font-black mb-6 bg-gradient-to-r from-slate-800 to-slate-600 bg-clip-text text-transparent">Team Auction</h3>
-      <p class="text-2xl font-bold text-slate-700 mb-8">
-        📅 14 January 2026
-      </p>
-      <div class="w-32 h-32 bg-gradient-to-r from-blue-500 to-purple-600 rounded-full mx-auto mb-8 shadow-2xl animate-pulse"></div>
-      <p class="text-xl text-slate-600 font-medium">Coming Soon — Stay Tuned!</p>
+
+<section data-tab="teams" class="space-y-20">
+
+  <div class="section-title">
+    <div class="section-bar"></div>
+    <h2 class="text-4xl font-black">👥 Teams</h2>
+  </div>
+
+  <!-- Team Aakash -->
+  <div class="bg-white rounded-3xl shadow-xl p-8 border">
+    <h3 class="text-3xl font-black mb-6">🏴‍☠️ Team Aakash Singh</h3>
+    <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
+      <div class="p-6 rounded-2xl border hover:shadow-lg">
+        <p class="text-xl font-black">Ayon Roy</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>GK</span><span class="font-black text-emerald-600">₹5,50,000</span>
+        </div>
+      </div>
+      <div class="p-6 rounded-2xl border hover:shadow-lg">
+        <p class="text-xl font-black">Vasu Gupta</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>ST</span><span class="font-black text-emerald-600">₹17,50,000</span>
+        </div>
+      </div>
+      <div class="p-6 rounded-2xl border hover:shadow-lg">
+        <p class="text-xl font-black">Aman Pandey</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>CM</span><span class="font-black text-emerald-600">₹4,00,000</span>
+        </div>
+      </div>
+      <div class="p-6 rounded-2xl border hover:shadow-lg">
+        <p class="text-xl font-black">Subhayan Banerjee</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>CD</span><span class="font-black text-emerald-600">₹3,00,000</span>
+        </div>
+      </div>
     </div>
   </div>
-</section>
 
+  <!-- Team Ankit -->
+  <div class="bg-white rounded-3xl shadow-xl p-8 border">
+    <h3 class="text-3xl font-black mb-6">🔥 Team Ankit Aich</h3>
+    <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
+      <div class="p-6 rounded-2xl border hover:shadow-lg">
+        <p class="text-xl font-black">Arka Dutta</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>GK</span><span class="font-black text-emerald-600">₹9,50,000</span>
+        </div>
+      </div>
+      <div class="p-6 rounded-2xl border hover:shadow-lg">
+        <p class="text-xl font-black">Hrishi</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>ST</span><span class="font-black text-emerald-600">₹6,50,000</span>
+        </div>
+      </div>
+      <div class="p-6 rounded-2xl border hover:shadow-lg">
+        <p class="text-xl font-black">Prashnik Dey</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>ST</span><span class="font-black text-emerald-600">₹3,50,000</span>
+        </div>
+      </div>
+      <div class="p-6 rounded-2xl border hover:shadow-lg">
+        <p class="text-xl font-black">Aritra Adhikari</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>CM</span><span class="font-black text-emerald-600">₹3,00,000</span>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Team Dipanjan -->
+  <div class="bg-white rounded-3xl shadow-xl p-8 border">
+    <h3 class="text-3xl font-black mb-6">⚡ Team Dipanjan Majumder</h3>
+    <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
+      <div class="p-6 rounded-2xl border hover:shadow-lg">
+        <p class="text-xl font-black">Srinjoy Kundu</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>GK</span><span class="font-black text-emerald-600">₹8,00,000</span>
+        </div>
+      </div>
+      <div class="p-6 rounded-2xl border hover:shadow-lg">
+        <p class="text-xl font-black">Soumik Mukherjee</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>CM</span><span class="font-black text-emerald-600">₹13,50,000</span>
+        </div>
+      </div>
+      <div class="p-6 rounded-2xl border hover:shadow-lg">
+        <p class="text-xl font-black">Kaustav Guha Mazumdar</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>CM</span><span class="font-black text-emerald-600">₹4,00,000</span>
+        </div>
+      </div>
+      <div class="p-6 rounded-2xl border hover:shadow-lg">
+        <p class="text-xl font-black">Sourav Acharjee</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>CD</span><span class="font-black text-emerald-600">₹3,00,000</span>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Team Sankha -->
+  <div class="bg-white rounded-3xl shadow-xl p-8 border">
+    <h3 class="text-3xl font-black mb-6">🧠 Team Sankhaneel</h3>
+    <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
+      <div class="p-6 rounded-2xl border hover:shadow-lg">
+        <p class="text-xl font-black">Aditya Chakraborty</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>GK</span><span class="font-black text-emerald-600">₹7,50,000</span>
+        </div>
+      </div>
+      <div class="p-6 rounded-2xl border hover:shadow-lg">
+        <p class="text-xl font-black">Supratim Sengupta</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>ST</span><span class="font-black text-emerald-600">₹13,00,000</span>
+        </div>
+      </div>
+      <div class="p-6 rounded-2xl border hover:shadow-lg">
+        <p class="text-xl font-black">Satyaki Das</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>CM</span><span class="font-black text-emerald-600">₹4,00,000</span>
+        </div>
+      </div>
+      <div class="p-6 rounded-2xl border hover:shadow-lg">
+        <p class="text-xl font-black">Moinak Dwarik</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>CD</span><span class="font-black text-emerald-600">₹4,00,000</span>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</section>
+  
+<!-- ================= COMING SOON SECTIONS (Enhanced) ================= -->
 <section data-tab="fixtures">
   <div class="bg-gradient-to-br from-emerald-50 to-emerald-100 rounded-3xl shadow-2xl p-16 text-center border border-emerald-200/50 coming-soon min-h-[400px]">
     <div><div class="text-7xl mb-8">📅</div><h3 class="text-4xl font-black text-emerald-800 mb-2">Fixtures</h3><p class="text-2xl text-emerald-700 font-bold">Coming Soon</p></div>
