--- a/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
+++ b/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
@@ -578,6 +578,12 @@ section[data-tab].active{display:block}
     <h3 class="text-3xl font-black mb-6">🏴‍☠️ Team Aakash Singh</h3>
     <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
       <div class="p-6 rounded-2xl border hover:shadow-lg">
+        <p class="text-xl font-black">Aakash Singh ©️</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>GK</span><span class="font-black text-emerald-600">₹5,50,000</span>
+        </div>
+      </div>
+      <div class="p-6 rounded-2xl border hover:shadow-lg">
         <p class="text-xl font-black">Ayon Roy</p>
         <div class="flex justify-between mt-3 text-sm">
           <span>GK</span><span class="font-black text-emerald-600">₹5,50,000</span>
@@ -608,6 +614,12 @@ section[data-tab].active{display:block}
   <div class="bg-white rounded-3xl shadow-xl p-8 border">
     <h3 class="text-3xl font-black mb-6">🔥 Team Ankit Aich</h3>
     <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
+      <div class="p-6 rounded-2xl border hover:shadow-lg">
+        <p class="text-xl font-black">Ankit Aich ©️</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>GK</span><span class="font-black text-emerald-600">₹5,50,000</span>
+        </div>
+      </div>
       <div class="p-6 rounded-2xl border hover:shadow-lg">
         <p class="text-xl font-black">Arka Dutta</p>
         <div class="flex justify-between mt-3 text-sm">
@@ -640,6 +652,12 @@ section[data-tab].active{display:block}
     <h3 class="text-3xl font-black mb-6">⚡ Team Dipanjan Majumder</h3>
     <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
       <div class="p-6 rounded-2xl border hover:shadow-lg">
+        <p class="text-xl font-black">Dipanjan Majumder ©️</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>GK</span><span class="font-black text-emerald-600">₹5,50,000</span>
+        </div>
+      </div>
+      <div class="p-6 rounded-2xl border hover:shadow-lg">
         <p class="text-xl font-black">Srinjoy Kundu</p>
         <div class="flex justify-between mt-3 text-sm">
           <span>GK</span><span class="font-black text-emerald-600">₹8,00,000</span>
@@ -671,6 +689,12 @@ section[data-tab].active{display:block}
     <h3 class="text-3xl font-black mb-6">🧠 Team Sankhaneel</h3>
     <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
       <div class="p-6 rounded-2xl border hover:shadow-lg">
+        <p class="text-xl font-black">Sankhaneel Roychowdhury ©️</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>GK</span><span class="font-black text-emerald-600">₹5,50,000</span>
+        </div>
+      </div>
+      <div class="p-6 rounded-2xl border hover:shadow-lg">
         <p class="text-xl font-black">Aditya Chakraborty</p>
         <div class="flex justify-between mt-3 text-sm">
           <span>GK</span><span class="font-black text-emerald-600">₹7,50,000</span>
@@ -697,6 +721,117 @@ section[data-tab].active{display:block}
     </div>
   </div>
 
+  <!-- Team Subhamoy Das -->
+  <div class="bg-white rounded-3xl shadow-xl p-8 border">
+    <h3 class="text-3xl font-black mb-6">🧠 Team Subhamoy</h3>
+    <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
+      <div class="p-6 rounded-2xl border hover:shadow-lg">
+        <p class="text-xl font-black">Subhamoy Das ©️</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>GK</span><span class="font-black text-emerald-600">₹5,50,000</span>
+        </div>
+      </div>
+      <div class="p-6 rounded-2xl border hover:shadow-lg">
+        <p class="text-xl font-black">Shrish Mukherjee</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>GK</span><span class="font-black text-emerald-600">₹4,00,000</span>
+        </div>
+      </div>
+      <div class="p-6 rounded-2xl border hover:shadow-lg">
+        <p class="text-xl font-black">China</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>CM</span><span class="font-black text-emerald-600">₹16,50,000</span>
+        </div>
+      </div>
+      <div class="p-6 rounded-2xl border hover:shadow-lg">
+        <p class="text-xl font-black">Subhojit Manna (Bony)</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>CD</span><span class="font-black text-emerald-600">₹3,00,000</span>
+        </div>
+      </div>
+      <div class="p-6 rounded-2xl border hover:shadow-lg">
+        <p class="text-xl font-black">Reet Karmakar</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>CM</span><span class="font-black text-emerald-600">₹3,50,000</span>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Team Thomas Joseph -->
+  <div class="bg-white rounded-3xl shadow-xl p-8 border">
+    <h3 class="text-3xl font-black mb-6">🧠 Team Thomas </h3>
+    <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
+      <div class="p-6 rounded-2xl border hover:shadow-lg">
+        <p class="text-xl font-black">Thomas Joseph ©️</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>GK</span><span class="font-black text-emerald-600">₹5,50,000</span>
+        </div>
+      </div>
+      <div class="p-6 rounded-2xl border hover:shadow-lg">
+        <p class="text-xl font-black">Rupayan Chakravarty</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>GK</span><span class="font-black text-emerald-600">₹4,00,000</span>
+        </div>
+      </div>
+      <div class="p-6 rounded-2xl border hover:shadow-lg">
+        <p class="text-xl font-black">Rahul Sarkar</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>CD</span><span class="font-black text-emerald-600">₹7,50,000</span>
+        </div>
+      </div>
+      <div class="p-6 rounded-2xl border hover:shadow-lg">
+        <p class="text-xl font-black">Arjobroto Das (Arjo)</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>ST</span><span class="font-black text-emerald-600">₹4,50,000</span>
+        </div>
+      </div>
+      <div class="p-6 rounded-2xl border hover:shadow-lg">
+        <p class="text-xl font-black">Akash Mukherjee</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>CM</span><span class="font-black text-emerald-600">₹4,00,000</span>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Team Yash Agarwal -->
+  <div class="bg-white rounded-3xl shadow-xl p-8 border">
+    <h3 class="text-3xl font-black mb-6">🧠 Team Yash </h3>
+    <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
+      <div class="p-6 rounded-2xl border hover:shadow-lg">
+        <p class="text-xl font-black">Yash Agarwal ©️</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>GK</span><span class="font-black text-emerald-600">₹5,50,000</span>
+        </div>
+      </div>
+      <div class="p-6 rounded-2xl border hover:shadow-lg">
+        <p class="text-xl font-black">Arnab Talukdar</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>GK</span><span class="font-black text-emerald-600">₹8,50,000</span>
+        </div>
+      </div>
+      <div class="p-6 rounded-2xl border hover:shadow-lg">
+        <p class="text-xl font-black">Ritam Chowdhury</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>CM</span><span class="font-black text-emerald-600">₹15,00,000</span>
+        </div>
+      </div>
+      <div class="p-6 rounded-2xl border hover:shadow-lg">
+        <p class="text-xl font-black">Arindam Rakshit</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>ST</span><span class="font-black text-emerald-600">₹3,00,000</span>
+        </div>
+      </div>
+      <div class="p-6 rounded-2xl border hover:shadow-lg">
+        <p class="text-xl font-black">Arkadip Rath</p>
+        <div class="flex justify-between mt-3 text-sm">
+          <span>CD</span><span class="font-black text-emerald-600">₹3,00,000</span>
+        </div>
+      </div>
+    </div>
+  </div>
+  
 </section>
   
 <!-- ================= COMING SOON SECTIONS (Enhanced) ================= -->
