--- a/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
+++ b/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
@@ -580,7 +580,7 @@ section[data-tab].active{display:block}
       <div class="p-6 rounded-2xl border hover:shadow-lg">
         <p class="text-xl font-black">Aakash Singh ©️</p>
         <div class="flex justify-between mt-3 text-sm">
-          <span>GK</span><span class="font-black text-emerald-600">₹5,50,000</span>
+          <span>ST</span><span class="font-black text-emerald-600">₹5,50,000</span>
         </div>
       </div>
       <div class="p-6 rounded-2xl border hover:shadow-lg">
@@ -617,7 +617,7 @@ section[data-tab].active{display:block}
       <div class="p-6 rounded-2xl border hover:shadow-lg">
         <p class="text-xl font-black">Ankit Aich ©️</p>
         <div class="flex justify-between mt-3 text-sm">
-          <span>GK</span><span class="font-black text-emerald-600">₹5,50,000</span>
+          <span>CD</span><span class="font-black text-emerald-600">₹5,50,000</span>
         </div>
       </div>
       <div class="p-6 rounded-2xl border hover:shadow-lg">
@@ -654,7 +654,7 @@ section[data-tab].active{display:block}
       <div class="p-6 rounded-2xl border hover:shadow-lg">
         <p class="text-xl font-black">Dipanjan Majumder ©️</p>
         <div class="flex justify-between mt-3 text-sm">
-          <span>GK</span><span class="font-black text-emerald-600">₹5,50,000</span>
+          <span>CD</span><span class="font-black text-emerald-600">₹5,50,000</span>
         </div>
       </div>
       <div class="p-6 rounded-2xl border hover:shadow-lg">
@@ -691,7 +691,7 @@ section[data-tab].active{display:block}
       <div class="p-6 rounded-2xl border hover:shadow-lg">
         <p class="text-xl font-black">Sankhaneel Roychowdhury ©️</p>
         <div class="flex justify-between mt-3 text-sm">
-          <span>GK</span><span class="font-black text-emerald-600">₹5,50,000</span>
+          <span>CD</span><span class="font-black text-emerald-600">₹5,50,000</span>
         </div>
       </div>
       <div class="p-6 rounded-2xl border hover:shadow-lg">
@@ -728,7 +728,7 @@ section[data-tab].active{display:block}
       <div class="p-6 rounded-2xl border hover:shadow-lg">
         <p class="text-xl font-black">Subhamoy Das ©️</p>
         <div class="flex justify-between mt-3 text-sm">
-          <span>GK</span><span class="font-black text-emerald-600">₹5,50,000</span>
+          <span>CM</span><span class="font-black text-emerald-600">₹5,50,000</span>
         </div>
       </div>
       <div class="p-6 rounded-2xl border hover:shadow-lg">
@@ -765,7 +765,7 @@ section[data-tab].active{display:block}
       <div class="p-6 rounded-2xl border hover:shadow-lg">
         <p class="text-xl font-black">Thomas Joseph ©️</p>
         <div class="flex justify-between mt-3 text-sm">
-          <span>GK</span><span class="font-black text-emerald-600">₹5,50,000</span>
+          <span>CD</span><span class="font-black text-emerald-600">₹5,50,000</span>
         </div>
       </div>
       <div class="p-6 rounded-2xl border hover:shadow-lg">
@@ -802,7 +802,7 @@ section[data-tab].active{display:block}
       <div class="p-6 rounded-2xl border hover:shadow-lg">
         <p class="text-xl font-black">Yash Agarwal ©️</p>
         <div class="flex justify-between mt-3 text-sm">
-          <span>GK</span><span class="font-black text-emerald-600">₹5,50,000</span>
+          <span>CD</span><span class="font-black text-emerald-600">₹5,50,000</span>
         </div>
       </div>
       <div class="p-6 rounded-2xl border hover:shadow-lg">
