--- a/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
+++ b/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
@@ -684,9 +684,9 @@ section[data-tab].active{display:block}
     </div>
   </div>
 
-  <!-- Team Sankha -->
+  <!-- Team Frost Five -->
   <div class="bg-white rounded-3xl shadow-xl p-8 border">
-    <h3 class="text-3xl font-black mb-6">🧠 Team Sankhaneel</h3>
+    <h3 class="text-3xl font-black mb-6">Frost Five</h3>
     <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
       <div class="p-6 rounded-2xl border hover:shadow-lg">
         <p class="text-xl font-black">Sankhaneel Roychowdhury ©️</p>
