--- a/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
+++ b/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
@@ -686,7 +686,14 @@ section[data-tab].active{display:block}
 
   <!-- Team Frost Five -->
   <div class="bg-white rounded-3xl shadow-xl p-8 border">
-    <h3 class="text-3xl font-black mb-6">Frost Five</h3>
+    <h3 class="text-3xl font-black mb-6 flex items-center gap-3">
+      <img 
+        src="./assets/teams/frost_five_emblem.png" 
+        alt="Frost Five Emblem"
+        class="w-10 h-10 object-contain"
+      />
+      Frost Five
+    </h3>
     <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
       <div class="p-6 rounded-2xl border hover:shadow-lg">
         <p class="text-xl font-black">Sankhaneel Roychowdhury ©️</p>
