--- a/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
+++ b/tournaments/winter-carnival-cup-2026/winter-carnival-cup-2026.html
@@ -688,7 +688,7 @@ section[data-tab].active{display:block}
   <div class="bg-white rounded-3xl shadow-xl p-8 border">
     <h3 class="text-3xl font-black mb-6 flex items-center gap-3">
       <img 
-        src="../assets/teams/frost_five_emblem.png" 
+        src="../../assets/teams/frost_five_emblem.png" 
         alt="Frost Five Emblem"
         class="w-10 h-10 object-contain"
       />
